// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render image 1`] = `
<div class="van-image-preview" name="van-fade">
  <div class="van-image-preview__index">1/3</div>
  <div class="van-swipe">
    <div class="van-swipe__track" style="width: 0px; transition-duration: 500ms; transform: translateX(0px);">
      <div class="van-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/1.png" class="van-image-preview__image" style="transition: .3s all;"></div>
      <div class="van-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/2.png" class="van-image-preview__image"></div>
      <div class="van-swipe-item" style="width: 0px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/3.png" class="van-image-preview__image"></div>
    </div>
  </div>
</div>
`;

exports[`zoom 1`] = `
<div class="van-image-preview" name="van-fade">
  <div class="van-image-preview__index">1/3</div>
  <div class="van-swipe">
    <div class="van-swipe__track" style="transition-duration: 500ms; width: 0px; transform: translateX(0px);">
      <div class="van-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/1.png" class="van-image-preview__image" style="transform: scale3d(2, 2, 1) translate(0px, NaNpx);"></div>
      <div class="van-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/2.png" class="van-image-preview__image"></div>
      <div class="van-swipe-item" style="width: 100px; height: 100%; transform: translateX(0px);"><img src="https://img.yzcdn.cn/3.png" class="van-image-preview__image"></div>
    </div>
  </div>
</div>
`;
